--- a/landing.css
+++ b/landing.css
@@ -2,11 +2,16 @@ body
 {
     display: flex;
     flex-direction: column;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Helvetica';
+    fallback: 'sans-serif';
 }
 .header
 {
     display: flex;
+    flex-shrink: 0;
+    position: sticky;
+    top: 0;
+    z-index: 999;
     background-color: #1F2937;
     padding: 16px 200px;
 }
@@ -103,7 +108,7 @@ button.b2
     justify-content: center;
     align-items: center;
     align-self: center;
-    margin: auto;
+    margin-left: auto;
     padding: 8px 32px;
     font-size: 18px;
 }
